--- a/.gitignore
+++ b/.gitignore
@@ -113,4 +113,10 @@ __pycache__/
 measurements/__pycache__/
 __pycache__/*
 **/**/.pyc
+CALIFA-results/
+CALIFA*
+GIST_PIPE3D/
+MANGA*
+compare_GIST_ssp_bases.py
+ngc0237.py
 
